--- a/LaundryBook/Pages/Index.cshtml
+++ b/LaundryBook/Pages/Index.cshtml
@@ -26,7 +26,7 @@
   
         <!-- Billede til højre -->
         <div class="col-lg-6 text-center">
-            <img src="~/img/forside.png"
+            <img src="~/img/vask.png"
                  alt="Premium Bathwater Hero"
                  class="img-fluid rounded shadow"
                  loading="lazy" />
