--- a/LaundryBook/Pages/Index.cshtml
+++ b/LaundryBook/Pages/Index.cshtml
@@ -12,7 +12,7 @@
                 LaundryBook
             </h1>
             <p class="lead text-muted mb-4">
-                🧺 Velkommen til fællesvaskeriet <strong>Her kan du nemt booke tid til vask, tørring og rulning.</strong>,
+                🧺 Velkommen til fællesvaskeriet <strong>Her kan du nemt booke tid til vask, tørring og rulning.</strong>
                 Vaskeriet er for alle beboere i foreningen og kan benyttes hele ugen inden for åbningstiden.
             </p>
             <div class="d-flex flex-column flex-sm-row gap-3 justify-content-center justify-content-lg-start">
@@ -27,7 +27,7 @@
         <!-- Billede til højre -->
         <div class="col-lg-6 text-center">
             <img src="~/img/vask.png"
-                 alt="Premium Bathwater Hero"
+                 alt="vask Hero"
                  class="img-fluid rounded shadow"
                  loading="lazy" />
         </div>
