--- a/LaundryBook/Pages/Shared/_Layout.cshtml
+++ b/LaundryBook/Pages/Shared/_Layout.cshtml
@@ -23,11 +23,12 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
+                        
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Hjemmeside</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Booking">Booking</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Booking</a>
+                        <li class="nav-item ">
+                            <a class = "nav-link text-dark" asp-area="" asp-page="/Overview1">Oversigt</a>
                         </li>
                     </ul>
                 </div>
