--- a/LaundryBook/Pages/Shared/_Layout.cshtml
+++ b/LaundryBook/Pages/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li class="nav-item ">
                             <a class = "nav-link text-dark" asp-area="" asp-page="/Overview1">Oversigt</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Login">Log in</a>
+                        </li>
                     </ul>
                 </div>
             </div>
