--- a/LaundryBook/Pages/Shared/_Layout.cshtml
+++ b/LaundryBook/Pages/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                             <a class = "nav-link text-dark" asp-area="" asp-page="/Overview1">Oversigt</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Login">Log in</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Login">Log ind</a>
                         </li>
                     </ul>
                 </div>
