--- a/LaundryBook/Pages/NewResident.cshtml
+++ b/LaundryBook/Pages/NewResident.cshtml
@@ -39,27 +39,27 @@
             </div>
             <!-- floor -->
             <div class="col-md-3">
-                <label for="inputComment">Skriv dit email her: </label>
+                <label for="inputComment">Skriv dit floor her: </label>
                 <input type="text" asp-for="Floor" id="inputForm" aria-describedby="textHelp" placeholder="Enter a comment" required>
             </div>
             <!-- streetandnumber -->
             <div class="col-md-3">
-                <label for="inputComment">Skriv dit email her: </label>
+                <label for="inputComment">Skriv dit Street and number her: </label>
                 <input type="text" asp-for="Streetandnumber" id="inputForm" aria-describedby="textHelp" placeholder="Enter a comment" required>
             </div>
             <!-- postacode -->
             <div class="col-md-3">
-                <label for="inputComment">Skriv dit email her: </label>
+                <label for="inputComment">Skriv dit Postalcode her: </label>
                 <input type="text" asp-for="postacode" id="inputForm" aria-describedby="textHelp" placeholder="Enter a comment" required>
             </div>
             <!-- apretmenleetter -->
             <div class="col-md-3">
-                <label for="inputComment">Skriv dit email her: </label>
+                <label for="inputComment">Skriv dit AprtmentLettter her: </label>
                 <input type="text" asp-for="aprtymentletter" id="inputForm" aria-describedby="textHelp" placeholder="Enter a comment" required>
             </div>
             <!-- adressline -->
             <div class="col-md-3">
-                <label for="inputComment">Skriv dit email her: </label>
+                <label for="inputComment">Skriv dit adressLine her: </label>
                 <input type="text" asp-for="addressline" id="inputForm" aria-describedby="textHelp" placeholder="Enter a comment" required>
             </div>
             
