--- a/LaundryBook/Pages/Index.cshtml
+++ b/LaundryBook/Pages/Index.cshtml
@@ -20,12 +20,8 @@
             </p>
 
             <!-- Knapper -->
-            <div class="d-flex flex-column flex-sm-row gap-3 justify-content-center justify-content-lg-start">
-                <!-- Førte til maskiner siden -->
-                <a asp-page="/Machines" class="btn btn-gold px-4">Maskiner</a>
-
-          
-                <a asp-page="/Booking" class="btn btn-outline-light px-4"> Booking</a>
+            <div 
+                class="d-flex flex-column flex-sm-row gap-3 justify-content-center justify-content-lg-start">
             </div>
         </div>
 
