--- a/LaundryBook/Pages/Shared/_Layout.cshtml
+++ b/LaundryBook/Pages/Shared/_Layout.cshtml
@@ -35,6 +35,13 @@
                         <li class="nav-item ">
                             <a class = "nav-link text-dark" asp-area="" asp-page="/Overview1">Oversigt</a>
                         </li>
+                        <li class="nav-item ">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/NewResident">Beborere</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Machines">Maskiner</a>
+                        </li>
+
                         @if (isLoggedIn)
                         {
                             <li class="nav-item">
